Modified Article swagger
