# HW9/swagger/v1/swagger.yaml
@@ -4,23 +4,67 @@ info:
   title: API V1
   version: v1
 paths:
-  "/api/v1":
-    get:
-      summary: index_all article
-      responses:
-        '200':
-          description: successful
   "/api/v1/articles":
     get:
       summary: list articles
+      tags:
+      - Articles
+      parameters:
+      - name: search
+        in: query
+        description: пошук в статті по title або body
+        schema:
+          type: string
+      - name: status
+        in: query
+        description: пошук по статусу статті (published/unpublished)
+        schema:
+          type: string
+      - name: name
+        in: query
+        description: пошук статті по автору
+        schema:
+          type: string
+      - name: tags
+        in: query
+        description: пошук статті по тегу
+        schema:
+          type: string
+      - name: order
+        in: query
+        description: сорторування статей (asc/desc)
+        schema:
+          type: string
       responses:
         '200':
           description: successful
     post:
       summary: create article
+      tags:
+      - Articles
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                author_id:
+                  type: integer
+                stutus:
+                  type: string
+              required:
+              - title
+              - body
+              - author_id
+              - status
   "/api/v1/articles/{id}":
     parameters:
     - name: id
@@ -31,21 +75,46 @@ paths:
         type: string
     get:
       summary: show article
+      tags:
+      - Articles
       responses:
         '200':
           description: successful
     patch:
       summary: update article
+      tags:
+      - Articles
       responses:
         '200':
           description: successful
     put:
       summary: update article
+      tags:
+      - Articles
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                stutus:
+                  type: string
+              required:
+              - title
+              - body
+              - status
     delete:
       summary: delete article
+      tags:
+      - Articles
       responses:
         '200':
           description: successful
